# nuxbt

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  nfpm.yaml  pyproject.toml  setup.cfg  setup.py  template_vagrantfile  vagrant_setup.py
.github/workflows/: bump_version.yml  ci.yml  release.yml  test.yml
debian/: changelog  control  files  nuxbt.desktop  rules
nuxbt/: __init__.py  bluez.py  cli.py  gui.py  nuxbt.py
nuxbt/controller/: input.py  server.py
nuxbt/web/: app.py
nuxbt/web/client/: package.json
nuxbt/web/templates/: index.html
scripts/: build_ppa_source.sh
tests/: conftest.py  test_cli.py  test_macro_hold.py  test_nuxbt.py  test_tui.py  test_webapp_macro.py
