[metadata]
name = nuxbt
version = 1.0.1
author = Hannah Brown
author-email = hannah@hannahis.gay
project_urls =
    Code = https://github.com/hannahbee91/nuxbt
    Issue tracker = https://github.com/hannahbee91/nuxbt/issues
license = MIT
license-file = LICENSE
description = Control your Nintendo Switch through a website, terminal, or macro.
long-description = file: README.md
long_description_content_type = text/markdown,
platform = any
url = git+https://github.com/hannahbee91/nuxbt
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = nuxbt
include_package_data = true
python_requires = >= 3.11
zip_safe = False

[options.entry_points]
console_scripts =
    nuxbt = nuxbt.cli:main

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
max-line-length = 100
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/